--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jkcss-icons",
+  "name": "@jehankandy/jkcss-icons",
   "version": "1.0.0",
   "description": "JKCSS Icons",
   "main": "jkicons.css",
