--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jehankandy/jkcss-icons",
-  "version": "1.0.0",
+  "version": "1.1.0-beta1",
   "description": "JKCSS Icons",
   "main": "jkicons.css",
   "scripts": {
